# wed

./: .gitignore  Cargo.toml  LICENSE  README.md  release.py
crates/crypto-core/: Cargo.toml  README.md
crates/crypto-core/src/: lib.rs
crates/crypto-core/tests/: core_roundtrip.rs
crates/crypto-python/: Cargo.toml  README.md  pyproject.toml
crates/crypto-python/src/: lib.rs
crates/crypto-python/tests/: test_crypto.py
crates/crypto-wasm/: Cargo.toml  README.md
crates/crypto-wasm/src/: lib.rs
crates/crypto-wasm/tests/: web.rs
docs/superpowers/plans/: 2026-03-29-wed-crypto-implementation.md  2026-03-29-wedts-wrapper-plan.md
docs/superpowers/specs/: 2026-03-29-wed-crypto-design.md
examples/python/: README.md  run_example_test.sh  test_example.py
examples/react/: README.md  package-lock.json  package.json  test.mjs
tests/: test_node_scripts.py  test_release.py
tests/vectors/: README.md
