[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "wedpy"
version = "0.1.1"
description = "Python bindings for the WED Rust crypto core"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "ohxxx" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Security :: Cryptography"
]

[project.urls]
Homepage = "https://github.com/ohxxx/wed"
Repository = "https://github.com/ohxxx/wed"
