[package]
name = "crypto-wasm"
version = "0.1.1"
edition = "2021"
description = "Rust/WASM symmetric encryption package shared between React and Python"
license = "MIT"
repository = "https://github.com/ohxxx/wed"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crypto-core = { path = "../crypto-core" }
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
